# Bototest

./: .gitignore  COMMENTS.md  README.md  pyproject.toml
app/: config.py  database.py  logger.py  main.py  routes.py  service.py
tests/: conftest.py  test_api.py  test_service.py
